# OnlyWan

./: .continue-here.md  .gitignore  .gitmodules  BUILD_SCRIPTS.md  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  benchmark.sh  build.sh  cmake_install.cmake  compile_commands.json  quick-build.sh  results.json  test_config_cuda.json  test_config_loader.cpp
.planning/: 4-UAT.md  MILESTONES.md  OPTIMIZATION_TODOS.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  v1.1-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  FLOW_DIAGRAMS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/debug/: clip-vision-encoder-dims.md  cuda-backend-inference.md  cuda-backend-investigation.md  gpu-placement-mismatch.md  knowledge-base.md  t2v-i2v-frame-crash.md  t2v-output-avi-unplayable.md  ti2v-crash-final.md  ti2v-crash.md  ti2v-final-crash.md  vae-decode-crash.md  vae-encode-crash.md  vae-encoder3d-crash.md  vae-patchify-reshape.md  video-output-unplayable.md
.planning/debug/resolved/: phase-15-compilation.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md
.planning/phases/01-foundation/: 01-foundation-PLAN.md  01-foundation-SUMMARY.md
.planning/phases/02-build-system/: 02-build-system-CONTEXT.md  02-build-system-PLAN.md  02-build-system-SUMMARY.md
.planning/phases/03-public-api/: 03-public-api-CONTEXT.md  03-public-api-PLAN.md  03-public-api-SUMMARY.md  03-public-api-UAT.md
.planning/phases/04-examples/: 04-examples-CONTEXT.md  04-examples-PLAN.md  04-examples-SUMMARY.md  04-examples-UAT.md
.planning/phases/05-encoders/: 05-encoders-PLAN.md  05-encoders-SUMMARY.md
.planning/phases/06-fix-duplicate-symbols/: 06-01-PLAN.md  06-RESEARCH.md  06-UAT.md  06-VERIFICATION.md  06-fix-duplicate-symbols-01-SUMMARY.md
.planning/phases/07-wire-core-model/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-RESEARCH.md  07-VALIDATION.md  07-VERIFICATION.md
.planning/phases/08-implement-generation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-02-PLAN.md  08-02-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md  08-VALIDATION.md  08-VERIFICATION.md
.planning/phases/09-api-fixes-vocab-mmap/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-RESEARCH.md  09-VALIDATION.md  09-VERIFICATION.md
.planning/phases/10-safetensors-runtime-loading/: 10-01-PLAN.md  10-01-SUMMARY.md  10-RESEARCH.md  10-VALIDATION.md  10-VERIFICATION.md
.planning/phases/11-safetensors-conversion-tool/: 11-01-PLAN.md  11-01-SUMMARY.md  11-RESEARCH.md  11-VALIDATION.md  11-VERIFICATION.md
.planning/phases/12-wire-vocab-dir-to-public-api/: 12-01-PLAN.md  12-01-SUMMARY.md  12-CONTEXT.md  12-RESEARCH.md  12-VALIDATION.md  12-VERIFICATION.md
.planning/phases/13-document-wan-convert-sub-model-scope/: 13-01-PLAN.md  13-01-SUMMARY.md  13-CONTEXT.md  13-RESEARCH.md  13-VALIDATION.md  13-VERIFICATION.md
.planning/phases/14-cuda-graph/: 14-01-PLAN.md  14-01-SUMMARY.md  14-02-PLAN.md  14-02-SUMMARY.md  14-CONTEXT.md
.planning/phases/15-/: 15-00-PLAN.md  15-00-SUMMARY.md  15-01-PLAN.md  15-01-SUMMARY.md  15-02-PLAN.md  15-02-SUMMARY.md  15-03-PLAN.md  15-03-SUMMARY.md  15-04-PLAN.md  15-04-SUMMARY.md  15-CONTEXT.md  15-VALIDATION.md  15-VERIFICATION.md
.planning/phases/15-multi-gpu-inference/: 15-00-PLAN.md  15-01-PLAN.md  15-02-PLAN.md  15-03-PLAN.md  15-04-PLAN.md  15-CONTEXT.md  15-RESEARCH.md
.planning/phases/16-spdlog/: 16-01-PLAN.md  16-01-SUMMARY.md  16-01-VERIFICATION.md  16-CONTEXT.md  16-UAT.md
.planning/phases/17-clip-text-encoder-vae-transformer/: 17-01-PLAN.md  17-01-SUMMARY.md  17-02-PLAN.md  17-02-SUMMARY.md  17-CONTEXT.md  17-DISCUSSION-LOG.md  17-RESEARCH.md  17-REVIEWS.md  17-VALIDATION.md  17-VERIFICATION.md
.planning/phases/18-model-registration-refactor/: 18-01-PLAN.md
.planning/phases/18-wan/: 18-01-PLAN.md  18-01-SUMMARY.md  (+1 more)
.planning/reports/: SESSION_REPORT.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: API_CALLS.md  API_COMPLETE_GUIDE.md  API_FLOW_ARCHITECTURE.md  API_FLOW_DIAGRAMS.md  CONFIG.md  README_API.md
docs/examples/: io_utils_usage.cpp  model_registry_usage.cpp
examples/: CMakeLists.txt  Makefile  README.md  cmake_install.cmake
examples/cli/: CMakeLists.txt  Makefile  avi_writer.c  avi_writer.h  cmake_install.cmake  main.cpp
examples/convert/: CMakeLists.txt  README.md  main.cpp
ggml/: Makefile  ggml-config.cmake
ggml/src/: Makefile  cmake_install.cmake
include/wan-cpp/: wan-helpers.hpp  wan-internal.hpp  wan.h
scripts/: README_BENCHMARK.md  baseline_compare.py  benchmark_detailed.py  benchmark_multi_gpu.py  merge_safetensors_bf16.py  pth_to_safetensors.py  validate_precision.py
scripts/configs/: benchmark_comprehensive.yaml  benchmark_default.yaml  benchmark_quick.yaml
scripts/templates/: report_template.html
src/: clip.hpp  config_loader.cpp  config_loader.hpp  flux.hpp  ggml_extend.hpp  gguf_reader.hpp  model.cpp  model.h  model_factory.cpp  model_factory.hpp  model_registry.cpp  model_registry.hpp  t5.hpp  util.cpp  util.h  wan-types.h  wan.hpp
src/api/: wan-api.cpp  wan-helpers.cpp  wan_config.cpp  wan_i2v.cpp  wan_loader.cpp  wan_t2v.cpp
src/vocab/: vocab.cpp  vocab.h
tests/: conftest.py  test_benchmark_framework.py  test_benchmark_integration.py  test_multi_gpu_api.py  test_multi_gpu_benchmark.py  test_multi_gpu_data_parallel.py  test_multi_gpu_precision.py  test_multi_gpu_tensor_parallel.py
tests/cpp/: CMakeLists.txt  benchmark_inference.cpp  model_factory.hpp  test_clip.cpp  test_clip_vision.cpp  test_factory.cpp  test_framework.hpp  test_helpers.hpp  test_io_npy.cpp  test_io_utils.hpp  test_t5.cpp  test_transformer.cpp  test_vae.cpp
tests/cpp/test_data/: .gitignore  README.md  generate_test_data.py
tests/fixtures/: test_config.json  wan_config_dummy.json
tests/scripts/: test_merge_safetensors_bf16.py  test_pth_to_safetensors.py
(+35 files in other folders)
